@startuml github-app-config

package GitHub {
    entity UserOrOrganisation {
        name: String
        repositories: List<Repository>
    }

    object AppOwner {

    }

    object InstallationOwner {

    }

    entity Repository {
        owner: UserOrOrganisation
        name: String
    }

    entity Installation {
        id: int
        app_id: int
        owner: UserOrOrganisation
        repositories: List<Repository>
    }

    entity App {
        id: int
        name: String
        owner: UserOrOrganisation
        client_id: String
        client_secret: String
        installations: List<Installation>
        private_keys: List<pem>
    }
}

package Spectacular {
    object WebUI {
    }

    object Backend {
        GITHUB_APP_ID
        GITHUB_APP_PRIVATE_KEY_FILE_PATH
        GITHUB_CLIENT_ID
        GITHUB_CLIENT_SECRET
    }
}

' actor User

' GitHub object relationships
UserOrOrganisation <|-- AppOwner
UserOrOrganisation <|-- InstallationOwner
InstallationOwner ||--o{ Installation
AppOwner ||--o{ App
InstallationOwner ||--o{ Repository
App ||-o{ Installation
Installation }o--o{ Repository

' GitHub objects to Spectacular config mappings
App ..> Backend : "app id, private key, client id and client secret"

@enduml